source/blender/makesdna/DNA_node_tree_interface_types.h
@@ -159,7 +159,10 @@ typedef struct bNodeTreeInterfacePanel {
    */
   bNodeTreeInterfacePanel *find_parent_recursive(const bNodeTreeInterfaceItem &item);
 
-  /** Create a copy of items in the span and add them to the interface. */
+  /**
+   * Create a copy of items in the span and add them to the interface.
+   * \note This does not generate new identifiers for items, use only for identital copies.
+   */
   void copy_from(blender::Span<const bNodeTreeInterfaceItem *> items_src, int flag);
   /** Remove all items from the panel. */
   void clear(bool do_id_user);
